--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "eslint": "node_modules/.bin/eslint --format codeframe .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha tests/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,11 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.13.0",
-    "nodemon": "^2.0.6"
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.6",
+    "sinon": "^9.2.1",
+    "sinon-chai": "^3.5.0"
   }
 }
